--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
 		"@metaplex-foundation/js": "^0.15.0",
 		"@solana-developers/helpers": "^2.2.0",
 		"@solana/spl-token": "^0.4.3",
+		"@solana/spl-token-metadata": "^0.1.2",
 		"@solana/web3.js": "^1.91.2",
 		"@typescript-eslint/parser": "^6.20.0",
 		"dotenv": "^16.0.0",
-		"eslint": "^8.56.0"
+		"eslint": "^8.56.0",
+		"nft.storage": "^7.1.1"
 	},
 	"author": "",
 	"license": "ISC"
