--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.ts",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "ts-node src/index.ts"
+		"start": "npx esrun src/index.ts"
 	},
 	"devDependencies": {
 		"@types/bn.js": "^5.1.0",
@@ -26,6 +26,7 @@
 		"@typescript-eslint/parser": "^6.20.0",
 		"dotenv": "^16.0.0",
 		"eslint": "^8.56.0",
+		"esrun": "^3.2.26",
 		"nft.storage": "^7.1.1"
 	},
 	"author": "",
