--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"typescript": "^4.6.3"
 	},
 	"dependencies": {
+		"@irys/sdk": "^0.1.21",
 		"@solana-developers/helpers": "^2.2.0",
 		"@solana/spl-token": "^0.4.3",
 		"@solana/spl-token-metadata": "^0.1.2",
